@@ -16,3 +16,5 @@ t/01_load.t
 t/02_config.t
 t/22_create_virdir.t
 t/88_execfail.t
+t/pod-coverage.t
+t/pod.t
