@@ -1,11 +1,15 @@
+---
 abstract: Administer IIS webserver on Windows
 author: Martin Thurn (mthurn@cpan.org)
 build_requires:
   IO::Capture::Stderr: 0
   Test::Simple: 0.44
 distribution_type: module
-generated_by: Module::Install version 0.61
+generated_by: Module::Install version 0.65
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Win32-IIS-Admin
 no_index:
   directory:
@@ -16,4 +20,4 @@ recommends:
 requires:
   Data::Dumper: 0
   File::Spec: 0
-version: 1.008
+version: 1.009
