@@ -4,9 +4,10 @@ package Module::Install::Win32;
 use strict;
 use Module::Install::Base;
 
-use vars qw{$VERSION @ISA};
+use vars qw{$VERSION $ISCORE @ISA};
 BEGIN {
-	$VERSION = '0.61';
+	$VERSION = '0.65';
+	$ISCORE  = 1;
 	@ISA     = qw{Module::Install::Base};
 }
 
