@@ -1,11 +1,12 @@
 
-# $Id: 88_execfail.t,v 1.4 2006/04/01 23:18:47 Daddy Exp $
+# $Id: 88_execfail.t,v 1.5 2007/05/01 00:35:56 Daddy Exp $
+
+use strict;
+use warnings;
 
 use ExtUtils::testlib;
 use Test::More 'no_plan';
 use IO::Capture::Stderr;
-use strict;
-use warnings;
 
 BEGIN
  {
@@ -22,7 +23,7 @@ if ($^O !~ m!win32!i)
   exit 0;
   } # if
 $oICS->stop;
-my $sMsg = $oICS->read || '';
+my $sMsg = join(';', $oICS->read) || '';
 my $iNoIIS = ($sMsg =~ m!can not find adsutil!i);
 SKIP:
   {
